--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on: [push, workflow_dispatch]
 env:
   DOCKER_REGISTRY: ghcr.io
   DOCKER_REPO: ${{ github.repository_owner }}
-  DOCKER_IMAGE: rc-server
+  DOCKER_IMAGE: rf433-api
   DOCKER_TAG: ${{ github.ref_name }}
   DOCKER_PLATFORM: linux/arm64
 
